src/styles/global.css
@import 'tailwindcss';

@config '../../tailwind.config.js';

@theme {
  --text-3xl: 2rem;
}

/*
  The default border color has changed to `currentcolor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentcolor);
  }
}

:root {
  --color-text-default: #24292f;
  --color-text-muted: #57606a;
  --color-text-accent: #0969da;
  --color-text-code-inline: var(--color-text-default);

  --color-bg-default: var(--color-gray-100);
  --color-bg-muted: #f6f8fa;
  --color-bg-subtle: #f6f8fa;

  /* Notion tag colors */
  --color-tag-text: var(--color-text-default);
  --color-tag-text-default: rgb(50, 48, 44);
  --color-tag-text-gray: rgb(50, 48, 44);
  --color-tag-text-brown: rgb(68, 42, 30);
  --color-tag-text-orange: rgb(73, 41, 14);
  --color-tag-text-yellow: rgb(64, 44, 27);
  --color-tag-text-green: rgb(28, 56, 41);
  --color-tag-text-blue: rgb(24, 51, 71);
  --color-tag-text-purple: rgb(65, 36, 84);
  --color-tag-text-pink: rgb(76, 35, 55);
  --color-tag-text-red: rgb(93, 23, 21);
  --color-tag-bg: var(--color-tag-bg-default);
  --color-tag-bg-default: rgba(227, 226, 224, 0.5);
  --color-tag-bg-gray: rgb(227, 226, 224);
  --color-tag-bg-brown: rgb(238, 224, 218);
  --color-tag-bg-orange: rgb(250, 222, 201);
  --color-tag-bg-yellow: rgb(253, 236, 200);
  --color-tag-bg-green: rgb(219, 237, 219);
  --color-tag-bg-blue: rgb(211, 229, 239);
  --color-tag-bg-purple: rgb(232, 222, 238);
  --color-tag-bg-pink: rgb(245, 224, 233);
  --color-tag-bg-red: rgb(255, 226, 221);
  --box-shadow-tag: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px inset;

  --color-border-default: #d0d7de;
  --color-border-muted: hsla(210, 18%, 87%, 1);

  /* Copy from GitHub */
  --font-sans:
    -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
    'Segoe UI Emoji';
  --font-title: 'Zen Kaku Gothic New', ui-sans-serif, -apple-system, Helvetica, Arial, sans-serif;
  --font-mono:
    SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
    Noto Color Emoji;
}

@layer components {
  .markdown-body {
    @apply font-base;

    & > *:first-child {
      @apply mt-0;
    }
    & > *:last-child {
      @apply mb-0;
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      @apply mt-6 mb-4 font-semibold leading-tight;
    }
    h1 {
      @apply text-3xl pb-[.3em] border-b border-solid border-b-gray-200;
    }
    h2 {
      @apply text-2xl pb-[.3em] border-b border-solid border-b-gray-200;
    }
    h3 {
      @apply text-xl;
    }
    h4 {
      @apply text-lg;
    }
    h5 {
      @apply text-base;
    }
    h6 {
      @apply text-sm text-gray-600;
    }

    p,
    blockquote,
    ul,
    ol,
    dl,
    table,
    pre,
    details,
    figure {
      @apply mt-0 mb-4;
    }

    details {
      @apply block;
    }

    p {
      @apply leading-normal break-words;
    }

    img {
      @apply max-w-full box-content place-self-center;
    }

    figure {
      @apply flex flex-col items-center;
    }

    figcaption {
      @apply text-center text-sm text-gray-500;
    }

    ul,
    ol {
      @apply pl-8;
      list-style: revert;

      ul,
      ol {
        @apply mt-0 mb-0;
      }
    }

    ol ol,
    ul ol {
      list-style-type: lower-roman;
    }

    hr {
      @apply h-1 bg-gray-200 border-0 p-0 my-6;
    }

    blockquote {
      @apply px-4 border-l-4 border-gray-200 text-gray-600;
    }

    pre.astro-code {
      @apply flex justify-between mb-4 !bg-[var(--color-bg-muted)] p-4 overflow-auto text-sm/normal rounded;
    }
  }
}

